fix(variables): update link blue color to improve visibility

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -15,7 +15,7 @@ $lightest-grey: #f9f9f9;
 $sub-grey: #cfcfcf;
 $white: #fff;
 $light-medium-grey: #f4f4f4;
-$link-blue: #0281e3;
+$link-blue: #65b1eb;
 
 // Colors
 $emphasis-blue: #4479df;
